--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             <a href="index.html">首頁</a> <!-- 返回首頁 -->
             <a href="about.html">關於我們</a> <!-- 本頁 -->
             <a href="contact.html">聯絡我們</a> <!-- 跳轉到聯絡我們 -->
-            <a href="c.html">聯絡我們</a>
+            <a href="aboutme.html">聯絡我們</a><!-- 跳轉到關於我 -->
         </nav>
     </header>
 
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
