--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             <a href="index.html">首頁</a> <!-- 超連結到首頁 -->
             <a href="about.html">關於我們</a> <!-- 超連結到關於我們 -->
             <a href="contact.html">聯絡我們</a> <!-- 本頁 -->
-            <a href="c.html">聯絡我們</a>
+            <a href="aboutme.html">聯絡我們</a><!-- 超連結到關於我 -->
         </nav>
     </header>
 
@@ -53,3 +53,4 @@
 
 </body>
 </html>
+
